--- a/proyecto/.env
+++ b/proyecto/.env
@@ -1,2 +1,7 @@
+# Las líneas que empiecen con un # representan un comentario.
+
+# Configuración de la base de datos.
+DB_HOST=127.0.0.1
 DB_USER=root
-DB_PASS=371237kjhjksad
+DB_PASS=
+DB_NAME=cwm_2020_2_n
